--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.31</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
     </dependencies>
 
     <properties>
